--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8081
+
 spring.datasource.url=jdbc:postgresql://todo_app_db:5432/mydatabase
 spring.datasource.username=myuser
 spring.datasource.password=secret
